--- a/indigicloud-ansible-installer/docker/tasks/main.yml
+++ b/indigicloud-ansible-installer/docker/tasks/main.yml
@@ -1,45 +1,57 @@
-
 ---
+- name: Check if Docker is already installed
+  command: docker --version
+  register: docker_installed
+  ignore_errors: true
+
 - name: Update apt package index
   apt:
-    update_cache: yes
+    update_cache: true
+  when: docker_installed.rc != 0
 
 - name: Install required packages for Docker
   apt:
-    name: 
+    name:
       - apt-transport-https
       - ca-certificates
       - curl
       - software-properties-common
     state: present
+  when: docker_installed.rc != 0
 
 - name: Add Docker's official GPG key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
+  when: docker_installed.rc != 0
 
 - name: Add Docker APT repository
   apt_repository:
     repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     state: present
+  when: docker_installed.rc != 0
 
 - name: Update apt package index after adding Docker repo
   apt:
-    update_cache: yes
+    update_cache: true
+  when: docker_installed.rc != 0
 
 - name: Install Docker CE
   apt:
     name: docker-ce
     state: present
+  when: docker_installed.rc != 0
 
 - name: Ensure Docker is running
   service:
     name: docker
     state: started
-    enabled: yes
+    enabled: true
+  when: docker_installed.rc != 0
 
 - name: Add current user to Docker group
   user:
-    name: "{{ ansible_user }}"
+    name: "{{ ansible_user_id }}"
     groups: docker
-    append: yes
+    append: true
+  when: docker_installed.rc != 0
