--- a/indigicloud-ansible-installer/mattermost/tasks/main.yml
+++ b/indigicloud-ansible-installer/mattermost/tasks/main.yml
@@ -1,35 +1,57 @@
-
 ---
 - name: Create directories for Mattermost
   file:
     path: "/srv/mattermost/{{ item }}"
     state: directory
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    mode: '0755'
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"
+    mode: "0755"
   with_items:
     - config
     - data
     - logs
 
+- name: Create directories for Mattermost database
+  file:
+    path: "/srv/mattermost/dbdata"
+    state: directory
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"
+    mode: "0755"
+
 - name: Create Docker Compose file for Mattermost
   copy:
     dest: /srv/mattermost/docker-compose.yml
     content: |
-      version: '3'
       services:
-        mattermost:
-          image: mattermost/mattermost-team-edition
-          restart: unless-stopped
+        db:
+          container_name: mattermost-db
+          image: postgres:13
+          restart: always
+          volumes:
+            - /srv/mattermost/dbdata:/var/lib/postgresql/data
+          environment:
+            POSTGRES_USER: mmuser
+            POSTGRES_PASSWORD: 3waf8z6q15rm
+            POSTGRES_DB: mattermost
+
+        app:
+          container_name: mattermost-app
+          image: mattermost/mattermost-team-edition:latest
+          restart: always
+          depends_on:
+            - db
           ports:
-            - "8065:8065"
+            - "8083:8065"
           volumes:
             - /srv/mattermost/data:/mattermost/data
-            - /srv/mattermost/config:/mattermost/config
-            - /srv/mattermost/logs:/mattermost/logs
+          environment:
+            MM_SQLSETTINGS_DRIVERNAME: postgres
+            MM_SQLSETTINGS_DATASOURCE: postgres://mmuser:3waf8z6q15rm@db:5432/mattermost?sslmode=disable
+            MM_SERVICESETTINGS_SITEURL: http://localhost:8065
 
 - name: Start Mattermost using Docker Compose
   shell: |
-    docker-compose up -d
+    docker compose up -d
   args:
     chdir: /srv/mattermost
