--- a/indigicloud-ansible-installer/gitlab/tasks/main.yml
+++ b/indigicloud-ansible-installer/gitlab/tasks/main.yml
@@ -15,22 +15,41 @@
   copy:
     dest: /srv/gitlab/docker-compose.yml
     content: |
+      version: '3.8'
       services:
         gitlab:
           image: 'gitlab/gitlab-ce:latest'
           container_name: 'gitlab'
           restart: always
-          hostname: '{{ gitlab_hostname }}'
+          hostname: '{{ item.subdomain }}.{{ cloudflare_domain }}'  # Dynamically set hostname
           environment:
             GITLAB_OMNIBUS_CONFIG: |
-              external_url '{{ gitlab_external_url }}'
+              external_url 'https://{{ item.subdomain }}.{{ cloudflare_domain }}'  # External URL for GitLab
+            VIRTUAL_HOST: {{ item.subdomain }}.{{ cloudflare_domain }}  # Set the subdomain for NGINX proxy
+            VIRTUAL_PORT: 80  # Port inside the GitLab container
+            LETSENCRYPT_HOST: {{ item.subdomain }}.{{ cloudflare_domain }}  # Request a certificate for this subdomain
+            LETSENCRYPT_EMAIL: {{ certbot_email }}
           ports:
-            - '8082:80'
+            - "{{ item.port }}:80"  # Dynamically expose the port from subdomains.yml
             - '2222:22'
           volumes:
             - '/srv/gitlab/config:/etc/gitlab'
             - '/srv/gitlab/logs:/var/log/gitlab'
             - '/srv/gitlab/data:/var/opt/gitlab'
+          networks:
+            - app-suite
+      networks:
+        app-suite:
+          driver: bridge
+          external: true
+  loop: "{{ subdomains }}"
+  when: item.service == 'gitlab'
+
+- name: Start GitLab using Docker Compose
+  shell: |
+    docker compose up -d
+  args:
+    chdir: /srv/gitlab
 
 - name: Start GitLab using Docker Compose
   shell: |
