--- a/indigicloud-ansible-installer/nextcloud/tasks/main.yml
+++ b/indigicloud-ansible-installer/nextcloud/tasks/main.yml
@@ -15,8 +15,9 @@
   copy:
     dest: /srv/nextcloud/docker-compose.yml
     content: |
+      version: '3.8'
       services:
-        db:
+        nextcloud_db:
           image: mariadb
           container_name: nextcloud_db
           restart: always
@@ -27,22 +28,36 @@
             MYSQL_DATABASE: {{ nextcloud_db_name }}
             MYSQL_USER: {{ nextcloud_db_user }}
             MYSQL_PASSWORD: {{ nextcloud_db_password }}
+          networks:
+            - app-suite
 
         app:
           image: nextcloud
           container_name: nextcloud_app
           restart: always
           ports:
-            - "8081:80"
+            - "{{ item.port }}:80"  # Dynamically expose the port from subdomains.yml
           depends_on:
-            - db
+            - nextcloud_db
           volumes:
             - /srv/nextcloud/app:/var/www/html
           environment:
-            MYSQL_PASSWORD: {{ nextcloud_db_password }}
-            MYSQL_DATABASE: {{ nextcloud_db_name }}
-            MYSQL_USER: {{ nextcloud_db_user }}
-            MYSQL_HOST: db
+            - MYSQL_PASSWORD={{ nextcloud_db_password }}
+            - MYSQL_DATABASE={{ nextcloud_db_name }}
+            - MYSQL_USER={{ nextcloud_db_user }}
+            - MYSQL_HOST=nextcloud_db
+            - VIRTUAL_HOST={{ item.subdomain }}.{{ cloudflare_domain }}  # Set the subdomain for NGINX proxy
+            - VIRTUAL_PORT=80  # Port inside the Nextcloud container
+            - LETSENCRYPT_HOST={{ item.subdomain }}.{{ cloudflare_domain }}  # Request a certificate for this subdomain
+            - LETSENCRYPT_EMAIL={{ certbot_email }}
+          networks:
+            - app-suite
+      networks:
+        app-suite:
+          driver: bridge
+          external: true
+  with_items: "{{ subdomains }}"
+  when: item.service == "nextcloud"
 
 - name: Start Nextcloud using Docker Compose
   shell: |
